# Laseroids

./: .gitignore  AdcLoadSensor.cpp  AdcLoadSensor.h  CMakeLists.txt  DS3231.cpp  DS3231.h  FlashDrive.cpp  FlashDrive.h  HiScore.cpp  HiScore.h  Interpolator.h  LICENSE  Laseroids.cpp  Laseroids.h  OledDisplay.cpp  OledDisplay.h  Queue.h  README.md  VectorDisplay.cpp  VectorDisplayFont.h  XY2-100.pio  XY2.cpp  XY2.h  basic_geometry.h  cdefs.h  charset1.cpp  charset1.h  demos.cpp  demos.h  font.h  font2.h  main.cpp  settings.h  ssd1306.cpp  ssd1306.h  standard_types.h  transform.txt  utilities.cpp  utilities.h  vt_vector_font.h
Q3_inverse_sqrt/: q3_sqrt.cpp  quake 3 Inverse Squareroot test.txt
